# Unsaycret-API

./: .dockerignore  .env.example  .gitignore  API_DOCUMENTATION.md  AS_NORM_README.md  COHORT_DATABASE_README.md  COHORT_IMPLEMENTATION_SUMMARY.md  CONFIG_README.md  DOCKER_DEPLOYMENT.md  Dockerfile  README.md  Unsaycret_API.postman_collection.json  asr_results.csv  deploy.bat  deploy.sh  docker-compose.yml  main.py  pyproject.toml  requirements-base.txt  requirements-cpu.txt  requirements-gpu.txt  requirements.txt  test_api_models.py  truth_map.txt
api/: README.md  api.py
data/: truth_map.csv
embeddingFiles/: README.md
examples/: API_TEST_GUIDE.md  README.md  VID_main.py  __init__.py  agent.md  as_norm_example.py  asr_benchmark.py  audio_distance_test.py  batch_audio_separation.py  batch_rename_audio_files.py  batch_single_speaker_separation.py  batch_test_speaker_identification.py  cohort_cli.py  cohort_manager.py  debug_cleanup_test.py  eval_single_speaker_selection.py  import_cohort_audio.py  manual_add_speaker.py  pipeline_benchmark.py  pipeline_eval.py  predefined_speaker_builder.py  run_orchestrator.py  stats_summarizer.py  test_all_apis.py  test_as_norm.py  test_asr.py  test_comprehensive_apis.py  test_modules.py  test_result_speaker1.json  test_speaker_api.py  test_speaker_identification.py  test_voice_verification.py  test_websocket_audio.py  test_websocket_stream.py  test_websocket_timerange.py  websocket_test.html
modules/: README.md  __init__.py  agent.md
pipelines/: README.md  __init__.py  agent.md  orchestrator.py
services/: README.md  agent.md  (+3 more)
(+123 files in other folders)
