[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unsaycret-api"
version = "0.4.1"
description = "Modular speech processing system: separation, speaker identification, ASR, API, Weaviate V2 integration"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "MISCapstoneProject" }
]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.34.0",
  "faster-whisper>=1.1.1",
  "ctranslate2>=4.6.0",
  "torch>=2.2.0",
  "torchaudio>=2.2.0",
  "jieba-fast>=0.53",
  "numpy>=1.26.0",
  "tqdm>=4.67.1",
  "python-dotenv>=1.0.0",
  "pydantic>=2.11.0",
  "weaviate-client>=4.5.3",
  "speechbrain>=1.0.2",
  "scipy>=1.15.0",
  "transformers>=4.0.0",
  "httpx>=0.27.0",
  "starlette>=0.46.0"
  # 其他依賴可依需求補充
]

[tool.setuptools.packages.find]
where = ["modules"]